syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgItem.proto

import "Items.proto";
import "Role.proto";
import "Equip.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "MsgItemProto";

enum RequestType{
    ALL = 0;
    USE = 1;
}

message RequestItem{

    int64 userId = 1;
    int64 itemsId = 2;

    RequestType type = 3;
}

message ResponseItem{
    int32 result = 1;
    string content = 2;
    RequestType type = 3;

    Role role = 4;

    repeated Items item = 5;
    repeated Equip equip = 6;
}
